--- a/Chatbot/Chatbot.csproj
+++ b/Chatbot/Chatbot.csproj
@@ -38,11 +38,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Chatbot.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="response\IResponseSet.cs" />
+    <Compile Include="response\Response.cs" />
+    <Compile Include="util\Menu.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="util" />
+    <Content Include="response\responses.json" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
