--- a/Chatbot/Chatbot.csproj
+++ b/Chatbot/Chatbot.csproj
@@ -32,6 +32,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net35\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
@@ -43,10 +47,16 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="response\IResponseSet.cs" />
     <Compile Include="response\Response.cs" />
+    <Compile Include="util\ChatEnvironment.cs" />
     <Compile Include="util\Menu.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="response\responses.json" />
+    <Content Include="response\responses.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
